--- a/generator/client/app/temp.jade
+++ b/generator/client/app/temp.jade
@@ -2,8 +2,7 @@
 	.col-md-12
 		table.table-striped.table-responsive.table-hover(ng-table="vm.table", show-filter="false")
 			tbody(ng-repeat="model in $data")
-				tr
-<% if(fields) { _.forEach(fields, function(field) { %>
+				tr<% if(fields) { _.forEach(fields, function(field) { %>
 					td(data-title="'<%= field.title %>'")
 						strong(ng-bind="model.<%= field.name %>")
 <% }) } else { %>
