--- a/generator/client/app/form/temp.jade
+++ b/generator/client/app/form/temp.jade
@@ -13,23 +13,29 @@
 					select.form-control(name="<%= field.name %>", ng-model="vm.model.<%= field.name %>", ng-options="o.value as o.title for o in vm.options"<%= field.required === 'true' ? ', required': '' %>)<% } else if(field.input == 'radio') { %>
 					.btn-group<% _.forEach(field.options, function(option) { %>
 						label.btn.btn-info(ng-model="vm.model.<%= field.name %>", btn-radio="<%= option.value %>", uncheckable) <%= option.title %></label><% }) %>
-						input(type="hidden", name="<%= field.name %>", ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %>)<% } else { %>
+						input(type="hidden", name="<%= field.name %>", ng-model="vm.model.<%= field.name %>"<%= field.required === 'true' ? ' required': '' %>)<% } else if(field.input == 'typeahead') { %>
+					input.form-control(type="text", name="<%= field.name %>", ng-model="vm.model.<%= field.name %>", typeahead="value._id as value.<%= field.key %> for value in vm.<%= field.getReferer %>($viewValue)", typeahead-loading="vm.loadingTypeahed", typeahead-no-results="vm.noResults", autocomplete="off", required)
+					i.glyphicon.glyphicon-refresh(ng-show="vm.loadingTypeahed")
+					div(ng-show="vm.noResults")
+						i.glyphicon.glyphicon-remove 
+							| No Results Found
+				<% } else { %>
 					input.form-control(type="<%= field.input %>", name="<%= field.name %>", ng-model="vm.model.<%= field.name %>", autocomplete="off"<%= field.required === 'true' ? ', required': '' %>)<% } %>
 				.col-md-9.col-md-push-3(ng-if="vm.isInteracted(form.<%= field.name %>)", ng-messages="form.<%= field.name %>.$error")
-					div(ng-messages-include="components/templates/_ng-messages.html")
+					div(ng-messages-include="templates/_ng-messages.html")
 <% }) } else { %>
 			.form-group(ng-class='vm.getFormClass(form.name)')
 				label.col-md-3.control-label Name
 				.col-md-9
 					input.form-control(type='text', name='name', autocomplete='off', ng-model='vm.model.name', required='')
 				.col-md-9.col-md-push-3(ng-if='vm.isInteracted(form.name)', ng-messages='form.name.$error')
-					div(ng-messages-include='components/templates/_ng-messages.html')
+					div(ng-messages-include='templates/_ng-messages.html')
 			.form-group(ng-class='vm.getFormClass(form.info)')
 				label.col-md-3.control-label Info
 				.col-md-9
 					input.form-control(type='text', name='name', autocomplete='off', ng-model='vm.model.info', required='')
 				.col-md-9.col-md-push-3(ng-if='vm.isInteracted(form.info)', ng-messages='form.info.$error')
-					div(ng-messages-include='components/templates/_ng-messages.html')
+					div(ng-messages-include='templates/_ng-messages.html')
 <% } %>
 			.form-group
 				.col-md-offset-3.col-md-9
