--- a/generator/client/app/temp.jade
+++ b/generator/client/app/temp.jade
@@ -4,7 +4,7 @@
 			tbody(ng-repeat="model in $data")
 				tr.align-center<% if(fields) { _.forEach(fields, function(field) { %>
 					td(data-title="'<%= field.title %>'")
-						strong(ng-bind="model.<%= field.name %><%= (field.type == 'Date') ? ' | amDateFormat:\'MM/DD/YYYY\'' : '' %>")
+						strong(ng-bind="model.<%= field.nameRef || field.name %><%= (field.type == 'Date') ? ' | amDateFormat:\'MM/DD/YYYY\'' : '' %>")
 <% }) } else { %>
 					td(data-title="'Name'")
 						strong(ng-bind="model.name")
